hphp/hack/test/typecheck/list_destructuring_tvar.php.like_types.exp
File "list_destructuring_tvar.php", line 38, characters 7-18:
  ~?(A1 | B1)
File "list_destructuring_tvar.php", line 39, characters 7-18:
  ~?(A2 | B2)
File "list_destructuring_tvar.php", line 29, characters 5-177:
Invalid return type (Typing[4110])
File "list_destructuring_tvar.php", line 8, characters 24-26:
Some type constraint(s) are violated here
File "list_destructuring_tvar.php", line 8, characters 24-26:
Tv2 is a constrained type parameter
File "list_destructuring_tvar.php", line 29, characters 5-177:
Expected void because this function implicitly returns void
File "list_destructuring_tvar.php", line 8, characters 24-26:
But got dynamic
